2005-08-24  Albert Chu  <chu11@llnl.gov>

	* Altered some debug message output conditions.

	* Added support for ubgl configuration and fixed up bgl
	configuration.

	* Fixed up spec file for bglion builds.

	* Altered some init.d script generation.

	* Fixed bug in bgl ciod config.

	* Fix gethostbyname bug.

	* Add support for --with-cerebrod-speaker-only option.
	
2005-08-23  Albert Chu  <chu11@llnl.gov>

	* Re-added static module build option.

	* Various minor fixes.

	* Various minor fixes to make cerebro work on ppc. 
	
2005-08-22  Albert Chu  <chu11@llnl.gov>

	* Fix minor build issues.
	
	* tag pre-static-build
	
2005-08-19  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/list.c, src/libs/common/hash.c: Remove memory
	buffering.

	* Make speaker run in main() for lower memory usage.

	* Fix metric controller corner case regarding metric list length.

2005-08-18  Albert Chu  <chu11@llnl.gov>

	* Various configuration fixes to ensure a good bgl ion build.

	* Renamed gendersllnl config module the chaos config module.

	* Added bgl config module.
	
2005-08-17  Albert Chu  <chu11@llnl.gov>

	* bgl ciod logic fix.
	
2005-08-16  Albert Chu  <chu11@llnl.gov>

	* Various cleanup fixes.

	* META: Prepare for new release.

	* tagged cerebro-1-0-0-pre5
	
2005-08-15  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Remove pointless autoconf calls.

	* etc/Makefile.am: Fix distcheck bug
	
2005-08-09  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Add bglion build.

	* Add init script for suse.
	
2005-08-08  Albert Chu  <chu11@llnl.gov>

	* Continued work to lower virtual and resident memory size.

	* Continued work to lesson binary size.

	* Complete initial bgl ciod metric module work.
	
2005-08-05  Albert Chu  <chu11@llnl.gov>

	* Some manpage fixing.

	* Fix some unlink corner cases.

	* Fix some socket setup corner cases.

	* tagged pre-lib-mem-rework-1

	* Begin rework to make resident memory size and virutal memory
	size smaller for cerebrod.
	