@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.70 2005-08-24 23:46:11 achu Exp $
+## $Id: Makefile.am,v 1.71 2005-08-25 01:44:21 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -20,11 +20,31 @@ noinst_HEADERS = cerebrod.h \
 # cerebrod daemon
 #
 
+if WITH_CEREBROD_SPEAKER_ONLY
+CEREBROD_LDADDS = ../libs/util/libutil_config.la \
+		  ../libs/util/libutil_metric.la \
+		  ../libs/wrappers/libwrappers.la \
+		  ../libs/wrappers/libwrappers_list.la \
+		  ../libs/wrappers/libwrappers_marshall.la
+else
+CEREBROD_LDADDS = ../libs/common/libfd.la \
+		  ../libs/util/libutil_config.la \
+		  ../libs/util/libutil_metric.la \
+		  ../libs/util/libutil_network.la \
+		  ../libs/wrappers/libwrappers.la \
+		  ../libs/wrappers/libwrappers_hash.la \
+		  ../libs/wrappers/libwrappers_list.la \
+		  ../libs/wrappers/libwrappers_marshall.la
+endif
+
+if !WITH_CEREBROD_NO_THREADS
 # For some reason pthread symbols can't be found when I 
 # add PTHREAD_CFLAGS to cerebrod_CFLAGS below.  Must be
 # due to some linker ordering issue.
 AM_CFLAGS = $(PTHREAD_CFLAGS)
 AM_LDFLAGS = $(PTHREAD_LIBS)
+WRAPPERS_PTHREAD_LIB = ../libs/wrappers/libwrappers_pthread.la
+endif
 
 sbin_PROGRAMS    = cerebrod
 cerebrod_SOURCES = cerebrod.c \
@@ -44,15 +64,8 @@ cerebrod_CFLAGS  = -I$(srcdir)/../libs/common \
 		   -I$(srcdir)/../libs/modules \
 		   -I$(srcdir)/../libs/util \
 		   -I$(srcdir)/../libs/wrappers
-cerebrod_LDADD   = ../libs/common/libfd.la \
-		   ../libs/util/libutil_config.la \
-		   ../libs/util/libutil_metric.la \
-		   ../libs/util/libutil_network.la \
-		   ../libs/wrappers/libwrappers.la \
-		   ../libs/wrappers/libwrappers_hash.la \
-		   ../libs/wrappers/libwrappers_list.la \
-		   ../libs/wrappers/libwrappers_marshall.la \
-		   ../libs/wrappers/libwrappers_pthread.la
+cerebrod_LDADD   = $(CEREBROD_LDADDS) \
+		   $(WRAPPERS_PTHREAD_LIB)
 
 ../libs/common/libfd.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
