@@ -15,6 +15,8 @@
 
 	* Add support for --with-cerebrod-speaker-only option.
 	
+	* Add support for --with-cerebrod-no-threads option.
+	
 2005-08-23  Albert Chu  <chu11@llnl.gov>
 
 	* Re-added static module build option.
